fix: markdown table overflow

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -193,7 +193,11 @@
   content: none;
 }
 
-.post-content .table {
+.post-content .rwd-table-wrapper {
+  overflow: auto;
+}
+
+.post-content table {
   overflow-x: auto;
   margin: 2rem 0;
 }
@@ -208,23 +212,23 @@
   border-collapse: collapse;
 }
 
-.post-content .table::-webkit-scrollbar,
-.post-content .table::-webkit-scrollbar-track {
+.post-content table::-webkit-scrollbar,
+.post-content table::-webkit-scrollbar-track {
   background-color: inherit;
   border-radius: calc(0.3rem + 1.5px);
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 
-.post-content .table::-webkit-scrollbar,
-.post-content .table::-webkit-scrollbar-track {
+.post-content table::-webkit-scrollbar,
+.post-content table::-webkit-scrollbar-track {
   background-color: inherit;
   border-radius: calc(0.3rem + 1.5px);
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 
-.post-content .table::-webkit-scrollbar-thumb {
+.post-content table::-webkit-scrollbar-thumb {
   background-color: var(--contrast-color);
   border: 4px solid transparent;
   background-clip: content-box;
